@startuml

title __APP's Class Diagram__\n

  package com.route.client {
    class Actualend {
    }
  }
  

  package com.route.client {
    class Actualstart {
    }
  }
  

  package com.route.client {
    class Address1 {
    }
  }
  

  package com.route.client {
    class AddressMJ {
    }
  }
  

  package com.route.client {
    class BuildConfig {
    }
  }
  

  package com.route.client {
    class Detail {
    }
  }
  

  package com.route.client {
    class Endlocation {
    }
  }
  

  package com.route.client {
    class Endwaypoint {
    }
  }
  

  package com.route.client {
    class ExampleInstrumentedTest {
    }
  }
  

  package com.route.client {
    class Geocodepoint {
    }
  }
  

  package com.route.client {
    class Geocodepoint1 {
    }
  }
  

  package com.route.client {
    class Hint {
    }
  }
  

  package com.route.client {
    class HomeActivity {
    }
  }
  

  package com.route.client {
    class Instruction {
    }
  }
  

  package com.route.client {
    class Itineraryitem {
    }
  }
  

  package com.route.client {
    class Line {
    }
  }
  

  package com.route.client {
    class LoginActivity {
    }
  }
  

  package com.route.client {
    class MainActivity {
    }
  }
  

  package com.route.client {
    class Maneuverpoint {
    }
  }
  

  package com.route.client {
    class Point {
    }
  }
  

  package com.route.client {
    class Point1 {
    }
  }
  

  package com.route.client {
    class RawRoute {
    }
  }
  

  package com.route.client {
    class ResourceMJ {
    }
  }
  

  package com.route.client {
    class Resourceset {
    }
  }
  

  package com.route.client {
    class Roadshieldrequestparameters {
    }
  }
  

  package com.route.client {
    class Routeleg {
    }
  }
  

  package com.route.client {
    class Routepath {
    }
  }
  

  package com.route.client {
    class Routesubleg {
    }
  }
  

  package com.route.client {
    class Shield {
    }
  }
  

  package com.route.client {
    class SlideAdaptor {
    }
  }
  

  package com.route.client {
    class Startlocation {
    }
  }
  

  package com.route.client {
    class Startwaypoint {
    }
  }
  

  package com.route.client {
    class Warning {
    }
  }
  

  Detail o-- Roadshieldrequestparameters : roadShieldRequestParameters
  Endlocation o-- Point : point
  Endlocation o-- AddressMJ : address
  HomeActivity -up-|> AppCompatActivity
  HomeActivity o-- SlideAdaptor : slideAdaptor
  Itineraryitem o-- Instruction : instruction
  Itineraryitem o-- Maneuverpoint : maneuverPoint
  LoginActivity -up-|> AppCompatActivity
  MainActivity -up-|> OnMapReadyCallback
  MainActivity -up-|> LocationEngineListener
  MainActivity -up-|> PermissionsListener
  MainActivity -up-|> OnMapClickListener
  MainActivity -up-|> AppCompatActivity
  ResourceMJ o-- Routepath : routePath
  Routeleg o-- Actualend : actualEnd
  Routeleg o-- Actualstart : actualStart
  Routeleg o-- Endlocation : endLocation
  Routeleg o-- Startlocation : startLocation
  Routepath o-- Line : line
  Routesubleg o-- Endwaypoint : endWaypoint
  Routesubleg o-- Startwaypoint : startWaypoint
  SlideAdaptor -up-|> PagerAdapter
  Startlocation o-- Point1 : point
  Startlocation o-- Address1 : address


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
